Corrected query to return student list in descending order based on ID.